Sat Aug 17 23:25:19 2013  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_time.rb: use the in_timezone() helper
	  and define it at the top with other helpers.

Sat Aug 17 22:20:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_mload): ignore auxiliary data, offset and zone, if
	  invalid.  [ruby-core:56648] [Bug #8795]

Sat Aug 17 20:11:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* process.c: [DOC] MACH_ABSOLUTE_TIME_CLOCK_MONOTONIC is an
	  available emulation for a monotonic clock on Darwin.
	  https://developer.apple.com/library/mac/qa/qa1398/_index.html

Fri Aug 16 18:12:05 2013  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: fix typo.

Fri Aug 16 18:09:20 2013  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: remove space characters from test names.

Fri Aug 16 17:32:02 2013  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: refactoring memory profiling tool for
	  test-all.
	  Add profiling targets /proc/meminfo and /proc/self/status.

	* test/runner.rb: accept other than 'true'.

Fri Aug 16 11:23:35 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_file_size, rb_file_flock): improve performance of Winodws.

	* file.c (rb_file_truncate): removed unnecessary #ifdef.

	* test/test_file.rb (TestFile#test_truncate_size): added an assertion
	  for File#size.

Fri Aug 16 10:07:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_single1): Renamed from bigdivrem_single.  Add
	  x_higher_bdigit argument.
	  (bigdivrem_single): Just call bigdivrem_single1.
	  (bigdivrem_restoring): Use bigdivrem_single1 to avoid memmove.

Fri Aug 16 09:17:00 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_rshift): Specify the higher BDIGIT instead of
	  sign bit.
	  (big_shift3): Follow the above change.

Fri Aug 16 02:20:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_toom3): Reduce a branch.

Fri Aug 16 02:14:09 2013  NARUSE, Yui  <naruse@ruby-lang.org>
